fix: hide scrollbar when it isn't necessary

--- a/webview/styles/original-style.css
+++ b/webview/styles/original-style.css
@@ -24,7 +24,7 @@ body {
 
 #snippet-scroll {
     max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     margin: auto;
     zoom: var(--zoom);
 }
